deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
  labels:
    function: app
spec:
  replicas: 1
  selector:
    matchLabels:
      function: app
  template:

    metadata:
      name: mysite-pod
      labels:
        function: app
    spec:
      containers:
      - name: mysite
        image: ghcr.io/mandops/cis-92:milestone-13.1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
            httpHeaders:
            - name: host
              value: localhost
        resources:
          requests:
            cpu: 500m 
            memory: 512Mi
            ephemeral-storage: 10Mi
          limits:
            cpu: 500m 
            memory: 512Mi
            ephemeral-storage: 10Mi
