deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysite-pod
  labels:
    function: app
spec:
  volumes:
  - name: db
    persistentVolumeClaim:
      claimName: mysite-data
  containers:
  - name: mysite
    image: ghcr.io/mandops/cis-92:milestone-6.1
    ports:
    - containerPort: 8000
    resources:
      requests:
        cpu: 500m 
        memory: 512Mi
        ephemeral-storage: 10Mi
      limits:
        cpu: 500m 
        memory: 512Mi
        ephemeral-storage: 10Mi
    volumeMounts:
    - name: db
      mountPath: /data
